--- a/tree/templates/tree/index.html
+++ b/tree/templates/tree/index.html
@@ -1,5 +1,30 @@
 {% extends "tree/base.html" %}
 {% load static %}
+
+{% block header %}
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="{% static 'tree/js/treant-js-master/Treant.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'tree/css/index.css' %}" type="text/css"/>
+    <!-- Bootstrap CSS (v2.2.2 since Treant.js uses jQuery v1.8) -->
+    <!-- https://bootstrapdocs.com/v2.2.2/docs/index.html -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="{% static 'tree/vendor/bootstrap-2.2.2/docs/assets/css/bootstrap.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'tree/vendor/bootstrap-2.2.2/docs/assets/css/bootstrap-responsive.css' %}" type="text/css">
+
+    <!-- javascript -->
+    <!-- Treant.js: https://fperucic.github.io/treant-js/ -->
+    <script src="https://kit.fontawesome.com/f06fa8d27a.js" crossorigin="anonymous"></script>
+    <script src="{% static 'tree/js/treant-js-master/vendor/raphael.js' %}"></script>
+    <script src="{% static 'tree/js/treant-js-master/Treant.js' %}"></script>
+    <script src="{% static 'tree/js/treant-js-master/vendor/jquery.min.js' %}"></script>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+    <script src="{% static 'tree/vendor/bootstrap-2.2.2/docs/assets/js/bootstrap.min.js' %}"></script>
+{% endblock header %}
+
 {% block content %}
     <!-- Sidebar -->
     <div id="sideNav" class="sidenav">
