--- a/tree/templates/tree/member.html
+++ b/tree/templates/tree/member.html
@@ -1,22 +1,62 @@
 {% extends "tree/base.html" %}
 {% load static %}
+
+{% block header %}
+    <!-- stylesheets -->
+    <!-- https://getbootstrap.com/docs/4.5/getting-started/introduction/ -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+{% endblock header %}
+
+{% block navbar %}
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top py-1" style="background-color: #e3f2fd;">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
+        <a class="navbar-brand" href="{% url 'tree-index' %}">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tree" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 0a.5.5 0 0 1 .416.223l3 4.5A.5.5 0 0 1 11 5.5h-.098l2.022 3.235a.5.5 0 0 1-.424.765h-.191l1.638 3.276a.5.5 0 0 1-.447.724h-11a.5.5 0 0 1-.447-.724L3.69 9.5H3.5a.5.5 0 0 1-.424-.765L5.098 5.5H5a.5.5 0 0 1-.416-.777l3-4.5A.5.5 0 0 1 8 0zM5.934 4.5H6a.5.5 0 0 1 .424.765L4.402 8.5H4.5a.5.5 0 0 1 .447.724L3.31 12.5h9.382l-1.638-3.276A.5.5 0 0 1 11.5 8.5h.098L9.576 5.265A.5.5 0 0 1 10 4.5h.066L8 1.401 5.934 4.5z"/>
+                <path d="M7 13h2v3H7v-3z"/>
+            </svg>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'tree-index' %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+{% endblock navbar %}
+
 {% block content %}
     {{ member_detail_json|json_script:"member_detail_json" }}
-    <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span5">
-                <img id="memberImg" class="img-rounded">
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col">
+                <img id="memberImg" class="img-fluid rounded float-left">
             </div>
-            <div class=span5>
+            <div class=col>
                 <h2 id="memberName_h2"></h2>
-                <table class="table table-striped">
+                <table class="table table-striped table-hover table-responsive">
                     <tr>
-                        <th>Full name</th>
+                        <th>Full Name</th>
                         <td id=memberName_table></td>
                     </tr>
                     <tr>
-                        <th>Date of birth</th>
+                        <th>Date of Birth</th>
                         <td id="memberDoB_table"></td>
+                    </tr>
+                    <tr>
+                        <th>Born Place</th>
+                        <td id="memberBornPlace_table"></td>
                     </tr>
                     <tr>
                         <th>Occupation</th>
@@ -36,6 +76,7 @@
         document.getElementById("memberName_h2").innerHTML = member_detail_json["name"];
         document.getElementById("memberName_table").innerHTML = member_detail_json["name"];
         document.getElementById("memberDoB_table").innerHTML = member_detail_json["dob"];
+        document.getElementById("memberBornPlace_table").innerHTML = member_detail_json["bornPlace"];
         document.getElementById("memberOcc_table").innerHTML = member_detail_json["occupation"];
     </script>
 {% endblock content %}
