change index.html container to container-fluid

--- a/tree/templates/tree/index.html
+++ b/tree/templates/tree/index.html
@@ -51,7 +51,7 @@
 
     <!-- MAIN -->
     <!-- Put in div main if want to push page to the right when showing sidenav -->
-    <div id="main" class="container">
+    <div id="main" class="container-fluid">
         <h1 style="text-align: center;">My Family Tree</h1>
         <div id="tree-simple"></div>
 
